[package]
name = "Rust-Stream-Compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.140"
libloading = "0.8.6"
lazy_static = "1.5.0"
regex = "1.11.1"
time = "0.3.41"
csv = "1.3.1"
pyo3 = "0.24.1"
windows = { version = "0.61.1", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System", "Win32_System_LibraryLoader"] }
